# SPL3

./: .gitignore
Client/: CMakeLists.txt  makefile
Client/include/: connectionHandler.h
Client/src/: BBclient.cpp  connectionHandler.cpp  echoClient.cpp
Server/: Movies.json  Output.json  Output2.json  Users.json  pom.xml
Server/Database/: Movies.json  Users.json
Server/echo/: EchoProtocol.java  LineMessageEncoderDecoder.java
Server/newsfeed/: FetchNewsCommand.java  NewsFeed.java  NewsFeedClientMain.java
Server/rci/: Command.java  ObjectEncoderDecoder.java  RCIClient.java  RemoteCommandInvocationProtocol.java
Server/src/main/java/bgu/spl181/net/api/: MessageEncoderDecoder.java  MessagingProtocol.java
Server/src/main/java/bgu/spl181/net/api/bidi/: BidiMessagingProtocol.java  Connections.java
Server/src/main/java/bgu/spl181/net/impl/: ImplConnections.java  LineMessageEncoderDecoder.java  MovieRentalServiceProtocol.java  Movies.java  Users.java
Server/src/main/java/bgu/spl181/net/impl/BBreactor/: ReactorMain.java
Server/src/main/java/bgu/spl181/net/impl/BBtpc/: TPCMain.java
Server/src/main/java/bgu/spl181/net/impl/echo/: EchoClient.java
Server/src/main/java/bgu/spl181/net/srv/: ActorThreadPool.java  BaseServer.java  BlockingConnectionHandler.java  ConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
Server/src/test/java/bgu/spl181/net/: Test.java
Server/src/test/java/bgu/spl181/net/impl/: A.java  ReactorUTBP_Intermediate_Test.java
Tests/: client1.exp
(+7 files in other folders)
